tests/lean/283.lean.expected.out
283.lean:1:24-1:25: error: application type mismatch
  f f
argument
  f
has type
  ?m : Sort ?u
but is expected to have type
  optParam (Sort ?u) t : Type ?u
